# dsdx

./: CONTRIBUTING.md  Makefile  README.md  critique.txt  pyproject.toml
_extras/: .gitignore  links.md
asimpy/: index.md
bibliography/: index.md
crdt/: crdt_replica.py  crdt_workload.py  ex_counter.out  ex_counter.py  ex_lwwregister.py  ex_lwwregister.txt  ex_opbased_counter.py  ex_opbased_counter.txt  ex_orset.py  ex_orset.txt  ex_partition.py  ex_partition.txt  example_basic_crdt.py  example_partition_crdt.py  gcounter.py  index.md  lwwregister.py  opbased_counter.py  orset.py  partition_manager.py  partitioned_crdt_replica.py  pncounter.py
distlock/: basic_lock_server.py  ex_basic.out  ex_basic.py  ex_failure.out  ex_failure.py  ex_failure.txt  ex_fencing.out  ex_fencing.py  ex_replicated.py  ex_replicated.txt  example_basic.py  example_failure.py  example_fencing.py  example_replicated.py  failing_client.py  fenced_client.py  index.md  lock_client.py  protected_resource.py  replicated_lock_client.py  replicated_lock_manager.py
dns/: authoritative_server.py  dns_client.py  dns_hierarchy.py  dns_message.py  ex_hierarchy.out  ex_hierarchy.py  ex_hierarchy.txt  ex_usage.out  ex_usage.py  hierarchical_resolver.py  index.md  recursive_resolver.py  simulate.py
docs/: index.html
eventual/: coordinator.py  coordinator_with_read_repair.py  ex_basic.out  ex_basic.py  ex_conflict.out  ex_conflict.py  ex_conflict.txt  ex_partition.out  ex_partition.py  ex_read_repair.out  ex_read_repair.py  example_basic.py  example_conflict.py  example_partition.py  example_read_repair.py  index.md  kv_client.py  messages.py  partitioned_coordinator.py  storage_node.py  vector_clock.py  versioned_value.py
extras/: distlock.md  dns.md  glossary.md  links.md  mapreduce.md  msgque.md  ntp.md  oauth.md  saga.md  tcp.md  torrent.md  tracing.md
framework/: index.md
glossary/: index.md
mapreduce/: coordinator_with_combiner.py  ex_combiner.out  ex_combiner.py  ex_combiner.txt  ex_fault_tolerance.out  ex_fault_tolerance.py  ex_fault_tolerance.txt  ex_inverted_index.py  ex_inverted_index.txt  ex_word_count.py  ex_word_count.txt  example_combiner.py  example_fault_tolerance.py  example_inverted_index.py  example_word_count.py  index.md  mapreduce_coordinator.py  mapreduce_types.py  mapreduce_worker.py  mr_coordinator.py  mr_types.py  mr_worker.py  speculative_coordinator.py  worker_with_combiner.py
msgque/: ack_broker.py  backpressure_broker.py  backpressure_publisher.py  broker.py  consumer_group.py  ex_acknowledgment.out  ex_acknowledgment.py  ex_acknowledgment.txt  ex_backpressure.out  ex_backpressure.py  ex_backpressure.txt  ex_priority.out  ex_priority.py  ex_priority.txt  ex_simple.out  ex_simple.py  ex_simple.txt  index.md  message.py  priority_backpressure.py  publisher.py  simulate.py  simulate_backpressure.py  subscriber.py
notes/: msgque.md  worksteal.md
ntp/: ex_stratum.py  ex_stratum.txt  ex_usage.out  ex_usage.py  index.md  ntp_client.py  ntp_message.py  ntp_server.py  simulate.py  stratum_hierarchy.py
oauth/: authorization_server.py  client_credentials.py  ex_basic_oauth.out  ex_basic_oauth.py  example_basic_oauth.py  index.md  oauth_client.py  oauth_types.py  pkce_client.py  resource_server.py
saga/: booking_services.py  ex_saga.py  ex_saga.txt  example_orchestrated_saga.py  index.md  saga_choreography.py  saga_orchestrator.py  saga_types.py
sim/: index.md
taskman/: index.md
tcp/: congestion_control.py  ex_basic.out  ex_basic.py  ex_loss_recovery.out  ex_loss_recovery.py  example_basic_tcp.py  example_loss_recovery.py  index.md  tcp_applications.py  tcp_connection.py  tcp_types.py  unreliable_network.py
templates/: page.html
theory/: index.md
torrent/: bittorrent_types.py  choking_peer.py  example_basic_bittorrent.py  example_swarm_growth.py  index.md  simplified_peer.py  tracker.py
tracing/: ex_decorators.py  ex_decorators.txt  ex_json.py  ex_json.txt  ex_tracing.txt  example_distributed_tracing.py  frontend_service.py  index.md  instrumented_service.py  json_collector.py  long_winded.py  sampled_tracer.py  short_winded.py  simple_service.py  trace_collector.py  tracing_decorators.py  tracing_types.py
unused/: future.txt
worksteal/: adaptive_scheduler.py  adaptive_worker.py  ex_adaptive.py  ex_adaptive.txt  ex_basic_ws.py  ex_basic_ws.txt  ex_granularity.py  ex_granularity.txt  ex_spawning.py  ex_spawning.txt  example_adaptive.py  example_basic_ws.py  example_granularity.py  example_spawning.py  index.md  joining_worker.py  performance_analyzer.py  scheduler.py  (+6 more)
(+45 files in other folders)
