[project]
name = "dsdx"
version = "0.4.0"
description = "distributed software design by example"
authors = [{name = "Greg Wilson", email = "gvwilson@third-bit.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "asimpy>=0.10.0",
    "mccole>=2.9.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://gvwilson.github.io/dsdx"
Repository = "https://github.com/gvwilson/dsdx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsdx"]

[dependency-groups]
dev = [
    "build>=1.4.0"
]

[tool.mccole]
title = "Distributed Systems Design by Example"
repo = "https://github.com/gvwilson/dsdx"
skips = [
    "*.out",
    "*.py",
    "*.sh",
    "*~",
    ".ruff_cache/**",
    "__pycache__/**",
    "docs/**",
    "uv.lock",
]
